--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiBibleService.cs" />
+    <Compile Include="Livro.cs" />
     <Compile Include="MenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
