--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net472" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="MaterialSkin.2" version="2.3.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
