Inserção funcional do botão de compartilhar. Card de Versiculo do Dia completo!

--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -211,6 +211,9 @@
     <Content Include="icons\copy.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="icons\whatsapp.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="icons\notepad.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
