Novas formas de compartilhar um versículo. Novo campo adicionado a tabela VersiculoAnotado.

--- a/App.config
+++ b/App.config
@@ -28,4 +28,13 @@
       </setting>
     </BeLightBible.Properties.Settings>
   </userSettings>
-<connectionStrings><add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=BeLightBibleDB;integrated security=True;multipleactiveresultsets=True;encrypt=False;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=BeLightBibleDB;integrated security=True;multipleactiveresultsets=True;encrypt=False;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
