Inserção da nova tela (Bible Kids) de varios componentes e ajuste de varios componentes

--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -159,6 +159,7 @@
     <Compile Include="FormAnotacao.Designer.cs">
       <DependentUpon>FormAnotacao.cs</DependentUpon>
     </Compile>
+    <Compile Include="HistoriasKidsTab.cs" />
     <Compile Include="HomeTab.cs">
       <SubType>UserControl</SubType>
     </Compile>
