Inserção da tela pra visualizar os grifos. Alterações na tabela Grifos pra armazenar e depois retornar o texto grifado.

--- a/App.config
+++ b/App.config
@@ -28,7 +28,9 @@
       </setting>
     </BeLightBible.Properties.Settings>
   </userSettings>
-<connectionStrings><add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=BeLightBibleDB;integrated security=True;multipleactiveresultsets=True;encrypt=False;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=BeLightBibleDB;integrated security=True;multipleactiveresultsets=True;encrypt=False;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
