--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -188,6 +188,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
+    <Compile Include="PlanoLeitura.cs" />
     <Compile Include="RespostasCache.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
