adição de cards de plano de leitura na base de dados

--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -188,7 +188,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
-    <Compile Include="PlanoLeitura.cs" />
+    <Compile Include="PlanoLeitura.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="RespostasCache.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
