Tela de admin funcionando, com aba de Criação de planos. Funcionando o CREATE (falta o UPDATE E DELETE) para criar um plano de leiura. READ funcionando na tela do utilizador, consegue ver os planos disponíveis (apenas ver).

--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -167,6 +167,12 @@
       <DependentUpon>HomeTab.cs</DependentUpon>
     </Compile>
     <Compile Include="Livro.cs" />
+    <Compile Include="MenuAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuAdmin.Designer.cs">
+      <DependentUpon>MenuAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +196,11 @@
     </Compile>
     <Compile Include="PlanoLeitura.cs">
       <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RespostasCache.cs">
       <DependentUpon>Model.tt</DependentUpon>
@@ -238,6 +249,9 @@
     <EmbeddedResource Include="HomeTab.resx">
       <DependentUpon>HomeTab.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MenuAdmin.resx">
+      <DependentUpon>MenuAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -246,13 +260,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="RegisterForm.resx">
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -335,6 +345,8 @@
     <Content Include="pause.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\ImagemPadrao.png" />
+    <None Include="Resources\open-book.png" />
     <Content Include="volume-2-white.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
