Adição de Meus planos, criação de tabelas para associar os planos criados no menuAdmin com os planos do utilizador. Uma série de bugs para resolver

--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -209,6 +209,9 @@
     <Compile Include="PlanoLeitura.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="PlanoLeituraDia.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="PlanoLeituraModeloDia.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
