alterações na tela de admin plano diario. testes feitos com o chatbot (tudo perfeitamente funcional, velocidade + qualidade)

--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -267,6 +267,9 @@
     <EmbeddedResource Include="FormAnotacao.resx">
       <DependentUpon>FormAnotacao.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormLeituraDiaria.resx">
+      <DependentUpon>FormLeituraDiaria.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormPlanoDiasAdmin.resx">
       <DependentUpon>FormPlanoDiasAdmin.cs</DependentUpon>
     </EmbeddedResource>
