Mudar a fonte da bíblia

--- a/App.config
+++ b/App.config
@@ -26,6 +26,12 @@
       <setting name="DataUltimoVersiculo" serializeAs="String">
         <value />
       </setting>
+      <setting name="FonteBiblia" serializeAs="String">
+        <value>	Segoe UI</value>
+      </setting>
+      <setting name="TamanhoFonteBiblia" serializeAs="String">
+        <value>12</value>
+      </setting>
     </BeLightBible.Properties.Settings>
   </userSettings>
   <connectionStrings>
