--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="DataUltimoVersiculo" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="FonteBiblia" Type="System.String" Scope="User">
+      <Value Profile="(Default)">	Segoe UI</Value>
+    </Setting>
+    <Setting Name="TamanhoFonteBiblia" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">12</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
