--- a/BeLightBible.csproj
+++ b/BeLightBible.csproj
@@ -182,6 +182,12 @@
     <Compile Include="AudioControl.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="CriarPlanoLeitura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CriarPlanoLeitura.Designer.cs">
+      <DependentUpon>CriarPlanoLeitura.cs</DependentUpon>
+    </Compile>
     <Compile Include="Estilo.cs" />
     <Compile Include="FormAnotacao.cs">
       <SubType>Form</SubType>
@@ -294,6 +300,9 @@
     <Compile Include="VersiculoSublinhado.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CriarPlanoLeitura.resx">
+      <DependentUpon>CriarPlanoLeitura.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormAnotacao.resx">
       <DependentUpon>FormAnotacao.cs</DependentUpon>
     </EmbeddedResource>
