switch de manter sessão funcionando juntamnete com o logout

--- a/App.config
+++ b/App.config
@@ -26,11 +26,14 @@
       <setting name="DataUltimoVersiculo" serializeAs="String">
         <value />
       </setting>
-      <setting name="FonteBiblia" serializeAs="String">
-        <value>	Segoe UI</value>
+      <setting name="ManterSessao" serializeAs="String">
+        <value>False</value>
       </setting>
-      <setting name="TamanhoFonteBiblia" serializeAs="String">
-        <value>12</value>
+      <setting name="UsernameSalvo" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UserIdSalvo" serializeAs="String">
+        <value>0</value>
       </setting>
     </BeLightBible.Properties.Settings>
   </userSettings>
